--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "daisyui": "^4.12.14",
+    "date-fns": "^4.1.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-date-range": "^2.0.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
